A bit of refactoring of the domain objects